# jsonl-annotations

./: README.md  annotations.py  pyproject.toml
annotation_tool/: __init__.py  adapters.py  app.py  cli.py  models.py  renderers.py  storage.py
data/: .gitignore  mc.schema.yaml  parallel.schema.yaml  qa.schema.yaml
tests/: test_adapters.py  test_renderers.py  test_storage.py
